syntax="proto3";

package model;

service Add{
   rpc Sum(SumRequest) returns (SumReply){}
   rpc Concat(ConcatRequest) returns (ConcatReply){}
}

message SumRequest{
   int64 a=1;
   int64 b=2;
}

message SumReply{
    int64 v=1;
    string err=2;
}

message ConcatRequest{
    string data1=1;
    string data2=2;
}

message ConcatReply{
    string result=1;
    string err=2;
}